@@ -15,17 +15,10 @@
  limitations under the License.
 -->
 
-<!-- The content of this page will be statically included into the top
-of the admin page.  Uncomment this as an example to see there the content
-will show up.
+<!-- The content of this page will be statically included into the top-
+right box of the cores overview page. Uncomment this as an example to 
+see there the content will show up.
 
-<hr>
-<i>This line will appear before the first table</i>
-<tr>
-<td colspan="2">
-This row will be appended to the end of the first table
-</td>
-</tr>
-<hr>
-
+<img src="img/ico/construction.png"> This line will appear at the top-
+right box on collection1's Overview
 -->
